# auto-subs

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  coderabbit.yaml  digest.txt  noxfile.py  pyproject.toml  sweep.yaml
.github/workflows/: ci.yml  release.yml
examples/: template_engine_demo.py
src/auto_subs/: __init__.py  api.py  cli.py
src/auto_subs/cli/: convert.py  generate.py  transcribe.py  utils.py
src/auto_subs/core/: generator.py  transcriber.py  word_segmenter.py
src/auto_subs/models/: __init__.py  formats.py  settings.py  subtitles.py  transcription.py
src/auto_subs/typing/: transcription.py
src/autosubs/: __init__.py
src/autosubs/api/: __init__.py
src/autosubs/cli/: burn.py  convert.py  framerate.py  generate.py  main.py  sync.py  transcribe.py  utils.py
src/autosubs/core/: __init__.py  builder.py  generator.py  karaoke.py  parser.py  selector.py  streamer.py  styler.py  template_engine.py  text_utils.py  vad.py  word_segmenter.py
src/autosubs/models/: __init__.py  ass.py  ass_styles.py  formats.py  subtitles.py  transcription.py
src/autosubs/models/styles/: __init__.py  domain.py  schemas.py
src/autosubs/models/subtitles/: __init__.py  ass.py  base.py  vector.py
tests/: conftest.py  test_api.py  test_cli.py  test_version.py
tests/api/: test_load.py
tests/cli/: test_burn.py  test_convert.py  test_convert_encoding.py  test_framerate.py  test_generate.py  test_generate_encoding.py  test_main.py  test_optional_dependencies.py  test_sync.py  test_transcribe.py  test_utils.py
tests/core/: test_burner.py  test_generator.py  test_karaoke.py  test_parser.py  test_selector.py  test_styler.py  test_template_engine.py  test_text_utils.py  test_trancriber.py  test_word_segmenter.py
tests/fixtures/sami/: sample.smi
tests/fixtures/ttml/: netflix_style.ttml  sample.ttml
tests/formats/: test_ass_collision_resolution.py  test_ass_comments.py  test_ass_custom_sections.py  test_ass_editing.py  test_ass_fixtures.py  test_ass_generator.py  test_ass_parser.py  test_ass_parser_edge_cases.py  test_ass_parser_real_world.py  test_ass_resample_resolution.py  test_ass_tag_manipulation.py  test_microdvd.py  test_mpl2_parser.py  test_sami.py  test_ttml.py
tests/models/: test_ass_models.py  test_subtitle_editing.py  test_subtitle_models.py  test_transcription_model.py  test_vector_drawing.py
